# Flowguard

./: LICENSE  README.md  pyproject.toml  stability_report.md  verify_determinism.py  verify_ml.py
.github/workflows/: main.yml
backend/: pyproject.toml
backend/scripts/: invariant_check.sh
examples/: simple_loop.py  simple_workflow.yaml
invariant/: cli.py
invariant/core/: config.py
invariant/execution/: engine.py  perturbation.py  scheduler.py  signals.py
invariant/ml/: data.py  features.py  supervisor.py
invariant/reporting/: generator.py
invariant/ros/: bridge.py
invariant/validation/: base.py  behavioral.py  metrics.py  structural.py  temporal.py
invariant/workflow/: graph.py  loader.py  node.py  registry.py
